--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+/LOGOPAKKE/Eps_logoer kopi/Huset_logo_16.eps
